--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
   <!-- Boostrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -35,7 +31,7 @@
             <span class="image main"><img src="images/ahdehd.jpg" alt="SMKN 8 SEMARANG" /></span>
 
             <p>
-              Pada mulanya di kota Semarang hanya ada satu Sekolah Pekerja Sosial Atas (SPSA) yaitu SPSA Semarang yang berlokasi di Jl. Imam bonjol semarang yang berdiri tahun 1961. SPSA adalah sekolah khusus yang mempunya jenjang
+              Pada mulanya di kota Semarang hanya ada satu Sekolah Pekerja Sosial Atas (SPSA) yaitu SPSA Semarang yang berlokasi di Jl. Imam bonjol semarang yang berdiri tahun 1961. SPSA adalah sekolah khusus yang mempunyai jenjang
               pendidikan 4 tahun.
             </p>
             <p>
@@ -133,6 +129,8 @@
             <ul>
               <li><a href="index.html">Homepage</a></li>
               <li><a href="generic.html">About</a></li>
+              <li><a href="visi.html">Visi Dan Misi</a></li>
+              <li><a href="aboutme.html">About Writer</a></li>
             </ul>
           </nav>
 
