--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <head>
     <title>PORTFOLIO</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon1.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -11,8 +12,8 @@
   <body>
     <!-- Header -->
     <header class="w3-display-container w3-content w3-center" style="max-width: 1500px">
-      <img class="w3-image" src="images/Port.jpg" alt="Me" width="1500" height="600" />
-      <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+      <img class="w3-image rounded " src="images/Port.jpg" alt="Me" width="1500" height="600" />
+      <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center ">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Dimas Avrian F.</h1>
         <h5 class="w3-hide-large" style="white-space: nowrap">Dimas Avrian F</h5>
         <h3 class="w3-hide-medium w3-hide-small">A STUDENT</h3>
@@ -20,7 +21,7 @@
 
       <!-- Navbar (placed at the bottom of the header image) -->
       <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom: -16px">
-        <a href="#" class="w3-bar-item w3-button">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
       </div>
@@ -29,7 +30,7 @@
     <!-- Navbar on small screens -->
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
       <div class="w3-bar w3-light-grey">
-        <a href="#" class="w3-bar-item w3-button">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
       </div>
@@ -37,19 +38,16 @@
     <!-- Page content -->
     <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
       <!-- Images (Portfolio) -->
-      <img src="images/port1.jpg" alt="PHOTO1" class="w3-image" width="1000" height="500" />
-      <img src="images/port2.jpg" alt="PHOTO2" class="w3-image w3-margin-top" width="1000" height="500" />
-      <img src="images/port3.jpg" alt="PHOTO3" class="w3-image w3-margin-top" width="1000" height="500" />
-      <img src="images/port4.jpg" alt="PHOTO4" class="w3-image w3-margin-top" width="1000" height="500" />
+      <img src="images/port1.jpg" alt="PHOTO1" class="w3-image rounded-3" width="1000" height="500" />
+      <img src="images/port2.jpg" alt="PHOTO2" class="w3-image w3-margin-top rounded-3" width="1000" height="500" />
+      <img src="images/port3.jpg" alt="PHOTO3" class="w3-image w3-margin-top rounded-3" width="1000" height="500" />
+      <img src="images/port4.jpg" alt="PHOTO4" class="w3-image w3-margin-top rounded-3" width="1000" height="500" />
 
       <!-- Contact -->
-      <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
+      <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top rounded-3" id="contact">
         <h3 class="w3-center"><b>Contact</b></h3>
         <hr />
-        <p class="text-center">Further About Who I Am, U Can Click Web Icon Below</p>
-        <div class="text-center">
-          <a href="index.html" class="bi bi-arrow-left-circle" style="font-size: 40px"></a>
-          <a href="https://fforfachriza.github.io" class="bi bi-globe2" style="font-size: 40px"></a>
+        <p class="text-center">Further About Who I Am, U Can <a href="https://fforfachriza.github.io">Click Here</a></p>
         </div>
       </div>
 
